--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ label ul {
 /* section 1 */
 
 .sect1{
-    background-image: url(/phts/bg\ \(4\).png);
+    background-image: url(bg\ \(4\).png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
